fix: small design changes for mobile devices

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://dabgan.github.io/Project06-React_Quiz",
+    "homepage": "https://dabgan.github.io/react-quiz",
     "name": "proj6",
     "version": "0.1.0",
     "private": true,
